[gd_scene load_steps=2 format=3 uid="uid://c8vqn7h8ry4m2"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="TopBar" type="Panel" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="ResourcesContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 400.0
offset_bottom = 50.0
theme_override_constants/separation = 30

[node name="CoinsLabel" type="Label" parent="TopBar/ResourcesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Coins: 1000"

[node name="WoodLabel" type="Label" parent="TopBar/ResourcesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Wood: 0"

[node name="StoneLabel" type="Label" parent="TopBar/ResourcesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Stone: 0"

[node name="SpeedButtons" type="HBoxContainer" parent="TopBar"]
layout_mode = 0
offset_left = 600.0
offset_top = 10.0
offset_right = 800.0
offset_bottom = 50.0
theme_override_constants/separation = 10

[node name="SpeedLabel" type="Label" parent="TopBar/SpeedButtons"]
layout_mode = 2
text = "Speed:"

[node name="Speed1xButton" type="Button" parent="TopBar/SpeedButtons"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "1x"

[node name="Speed2xButton" type="Button" parent="TopBar/SpeedButtons"]
layout_mode = 2
toggle_mode = true
text = "2x"

[node name="Speed3xButton" type="Button" parent="TopBar/SpeedButtons"]
layout_mode = 2
toggle_mode = true
text = "3x"

[node name="MenuButtons" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="SaveButton" type="Button" parent="TopBar/MenuButtons"]
layout_mode = 2
text = "Save"

[node name="MenuButton" type="Button" parent="TopBar/MenuButtons"]
layout_mode = 2
text = "Menu"

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="UnitButtons" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 700.0
offset_bottom = 100.0
theme_override_constants/separation = 15

[node name="WorkerButton" type="Button" parent="BottomPanel/UnitButtons"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
text = "Worker
40c 20w"

[node name="SoldierButton" type="Button" parent="BottomPanel/UnitButtons"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
text = "Soldier
60c 40w"

[node name="KnightButton" type="Button" parent="BottomPanel/UnitButtons"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
text = "Knight
80c 70s"

[node name="MageButton" type="Button" parent="BottomPanel/UnitButtons"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
text = "Mage
120c 30w"

[node name="ArcherButton" type="Button" parent="BottomPanel/UnitButtons"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
text = "Archer
50c 50w"

[node name="BehaviorButtons" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="BehaviorLabel" type="Label" parent="BottomPanel/BehaviorButtons"]
layout_mode = 2
text = "Behavior:"
vertical_alignment = 1

[node name="AggressiveButton" type="Button" parent="BottomPanel/BehaviorButtons"]
layout_mode = 2
text = "Aggressive"

[node name="DefensiveButton" type="Button" parent="BottomPanel/BehaviorButtons"]
layout_mode = 2
text = "Defensive"

[node name="PassiveButton" type="Button" parent="BottomPanel/BehaviorButtons"]
layout_mode = 2
text = "Passive"
